# Iris

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  common.hpp
test/: CMakeLists.txt  gtest.cpp  random_reader.cpp  random_writer.cpp  reader.cpp  simplified_shared.py  test_structs.hpp  writer.cpp
